--- a/README
+++ b/README
@@ -5,8 +5,8 @@
 
 #+begin_quote
 
-Fetched high-quality wallpaper from this amazing site: [[https://wallpaperswide.com/][WallpapersWide.com - Free 4K
-& 8K UltraHD Desktop Backgound Wallpapers]].
+Fetch high-quality wallpapers from this amazing site: [[https://wallpaperswide.com/][WallpapersWide.com - Free
+4K & 8K UltraHD Desktop Backgound Wallpapers]].
 
 All the image data will be used only for particular research purposes.
 
